2010-02-12  Dave Korn  <dave.korn.cygwin@gmail.com> 	    Jack Howarth  <howarth@bromo.med.uc.edu> 	    Iain Sandoe <iain.sandoe@sandoe-acoustics.co.uk>

PR target/42982
	Partial revert of unintended change in fix for PR41605.
	* gcc/config/darwin.h: Fix typo.
	* gcc/config/darwin9.h: Same.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@156736 138bc75d-0d04-0410-961f-82ee72b054a4